javacc-5.0/bin/Parser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. Parser.java */
import java.io.File;
import java.io.FileInputStream;
import java.io.IOException;

public class Parser/*@bgen(jjtree)*/implements ParserTreeConstants, ParserConstants {/*@bgen(jjtree)*/
  protected static JJTParserState jjtree = new JJTParserState();static boolean DEBUG_PARSER = false;
        public static void main(String[] args) {
                Parser parser;
                SimpleNode  root = null;
                try {
                                FileInputStream file = null;
                                try{
                                        file = new FileInputStream(args[0]);
                                        if(file != null){
                                                parser = new Parser(file);
                                                parser.start();
                                                System.out.println("Successful parsing.");

                                                root = (SimpleNode) parser.jjtree.rootNode();
                                                root.dump("");

                                                try{
                                                        Semantico semantico = new Semantico();
                                                        root.jjtAccept(semantico, null);
                                                        semantico.tablaSimbolos();

                                                } catch (Throwable e){
                                                        System.out.println("Error: " + e.getMessage());
                                                }
                                        }
                                } catch (Throwable e) {
                                        System.out.println("Error: " + e.getMessage());
                                }
                } catch (Throwable e) {
                        System.out.println("Syntax Error: " + e.getMessage());
                }
        }

  static final public void start() throws ParseException {
    program();
    jj_consume_token(0);
  }

  static final public void program() throws ParseException {
 /*@bgen(jjtree) PROGRAM */
  ASTPROGRAM jjtn000 = new ASTPROGRAM(JJTPROGRAM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(TOK_CLASS);
      jj_consume_token(TOK_PROGRAM);
      jj_consume_token(TOK_LEFT_BRACE);
      label_1:
      while (true) {
        if (jj_2_1(3)) {
          ;
        } else {
          break label_1;
        }
        field_decl();
      }
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case TOK_BOOLEAN:
        case TOK_INT:
        case TOK_VOID:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_2;
        }
        method_decl();
      }
      jj_consume_token(TOK_RIGHT_BRACE);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void field_decl() throws ParseException {
 /*@bgen(jjtree) GLOBAL_DECLARATION */
  ASTGLOBAL_DECLARATION jjtn000 = new ASTGLOBAL_DECLARATION(JJTGLOBAL_DECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      type();
      field_decl_unit();
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case TOK_COMMA:
          ;
          break;
        default:
          jj_la1[1] = jj_gen;
          break label_3;
        }
        jj_consume_token(TOK_COMMA);
        field_decl_unit();
      }
      jj_consume_token(TOK_SEMICOLON);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void field_decl_unit() throws ParseException {
 /*@bgen(jjtree) DECLARATION */
  ASTDECLARATION jjtn000 = new ASTDECLARATION(JJTDECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      id();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TOK_LEFT_BRACKET:
        jj_consume_token(TOK_LEFT_BRACKET);
                                    ASTID_SIZE jjtn001 = new ASTID_SIZE(JJTID_SIZE);
                                    boolean jjtc001 = true;
                                    jjtree.openNodeScope(jjtn001);
        try {
          int_literal();
        } catch (Throwable jjte001) {
                                    if (jjtc001) {
                                      jjtree.clearNodeScope(jjtn001);
                                      jjtc001 = false;
                                    } else {
                                      jjtree.popNode();
                                    }
                                    if (jjte001 instanceof RuntimeException) {
                                      {if (true) throw (RuntimeException)jjte001;}
                                    }
                                    if (jjte001 instanceof ParseException) {
                                      {if (true) throw (ParseException)jjte001;}
                                    }
                                    {if (true) throw (Error)jjte001;}
        } finally {
                                    if (jjtc001) {
                                      jjtree.closeNodeScope(jjtn001, true);
                                    }
        }
        jj_consume_token(TOK_RIGHT_BRACKET);
        break;
      default:
        jj_la1[2] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void method_decl() throws ParseException {
 /*@bgen(jjtree) METHOD_DECLARATION */
  ASTMETHOD_DECLARATION jjtn000 = new ASTMETHOD_DECLARATION(JJTMETHOD_DECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TOK_BOOLEAN:
      case TOK_INT:
        type();
        break;
      case TOK_VOID:
                    ASTTYPE_VOID jjtn001 = new ASTTYPE_VOID(JJTTYPE_VOID);
                    boolean jjtc001 = true;
                    jjtree.openNodeScope(jjtn001);
        try {
          jj_consume_token(TOK_VOID);
        } finally {
                    if (jjtc001) {
                      jjtree.closeNodeScope(jjtn001, true);
                    }
        }
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      id();
      jj_consume_token(TOK_LEFT_PAREN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TOK_BOOLEAN:
      case TOK_INT:
        type();
        id();
        label_4:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case TOK_COMMA:
            ;
            break;
          default:
            jj_la1[4] = jj_gen;
            break label_4;
          }
          jj_consume_token(TOK_COMMA);
          type();
          id();
        }
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
      jj_consume_token(TOK_RIGHT_PAREN);
      block();
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void block() throws ParseException {
 /*@bgen(jjtree) BLOCK */
  ASTBLOCK jjtn000 = new ASTBLOCK(JJTBLOCK);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(TOK_LEFT_BRACE);
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case TOK_BOOLEAN:
        case TOK_INT:
          ;
          break;
        default:
          jj_la1[6] = jj_gen;
          break label_5;
        }
        var_decl();
      }
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case TOK_BREAK:
        case TOK_CALLOUT:
        case TOK_CONTINUE:
        case TOK_FOR:
        case TOK_IF:
        case TOK_RETURN:
        case TOK_LEFT_BRACE:
        case ID:
          ;
          break;
        default:
          jj_la1[7] = jj_gen;
          break label_6;
        }
        statement();
      }
      jj_consume_token(TOK_RIGHT_BRACE);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void var_decl() throws ParseException {
 /*@bgen(jjtree) VARIABLE_DECLARATION */
  ASTVARIABLE_DECLARATION jjtn000 = new ASTVARIABLE_DECLARATION(JJTVARIABLE_DECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      type();
      id();
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case TOK_COMMA:
          ;
          break;
        default:
          jj_la1[8] = jj_gen;
          break label_7;
        }
        jj_consume_token(TOK_COMMA);
        id();
      }
      jj_consume_token(TOK_SEMICOLON);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void type() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TOK_INT:
          ASTTYPE_INT jjtn001 = new ASTTYPE_INT(JJTTYPE_INT);
          boolean jjtc001 = true;
          jjtree.openNodeScope(jjtn001);
      try {
        jj_consume_token(TOK_INT);
      } finally {
          if (jjtc001) {
            jjtree.closeNodeScope(jjtn001, true);
          }
      }
      break;
    case TOK_BOOLEAN:
          ASTTYPE_BOOLEAN jjtn002 = new ASTTYPE_BOOLEAN(JJTTYPE_BOOLEAN);
          boolean jjtc002 = true;
          jjtree.openNodeScope(jjtn002);
      try {
        jj_consume_token(TOK_BOOLEAN);
      } finally {
          if (jjtc002) {
            jjtree.closeNodeScope(jjtn002, true);
          }
      }
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void statement() throws ParseException {
    if (jj_2_2(3)) {
      assignment();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TOK_CALLOUT:
      case ID:
        method_call();
        jj_consume_token(TOK_SEMICOLON);
        break;
      case TOK_IF:
          ASTIF jjtn001 = new ASTIF(JJTIF);
          boolean jjtc001 = true;
          jjtree.openNodeScope(jjtn001);
        try {
          jj_consume_token(TOK_IF);
          jj_consume_token(TOK_LEFT_PAREN);
          expr();
          jj_consume_token(TOK_RIGHT_PAREN);
          block();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case TOK_ELSE:
            jj_consume_token(TOK_ELSE);
            block();
            break;
          default:
            jj_la1[10] = jj_gen;
            ;
          }
        } catch (Throwable jjte001) {
          if (jjtc001) {
            jjtree.clearNodeScope(jjtn001);
            jjtc001 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte001 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte001;}
          }
          if (jjte001 instanceof ParseException) {
            {if (true) throw (ParseException)jjte001;}
          }
          {if (true) throw (Error)jjte001;}
        } finally {
          if (jjtc001) {
            jjtree.closeNodeScope(jjtn001, true);
          }
        }
        break;
      case TOK_FOR:
          ASTFOR jjtn002 = new ASTFOR(JJTFOR);
          boolean jjtc002 = true;
          jjtree.openNodeScope(jjtn002);
        try {
          jj_consume_token(TOK_FOR);
          id();
          jj_consume_token(TOK_ASSIGN);
          expr();
          jj_consume_token(TOK_COMMA);
          expr();
          block();
        } catch (Throwable jjte002) {
          if (jjtc002) {
            jjtree.clearNodeScope(jjtn002);
            jjtc002 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte002 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte002;}
          }
          if (jjte002 instanceof ParseException) {
            {if (true) throw (ParseException)jjte002;}
          }
          {if (true) throw (Error)jjte002;}
        } finally {
          if (jjtc002) {
            jjtree.closeNodeScope(jjtn002, true);
          }
        }
        break;
      case TOK_RETURN:
          ASTRETURN jjtn003 = new ASTRETURN(JJTRETURN);
          boolean jjtc003 = true;
          jjtree.openNodeScope(jjtn003);
        try {
          jj_consume_token(TOK_RETURN);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case TOK_CALLOUT:
          case TOK_FALSE:
          case TOK_TRUE:
          case CHARACTER_LITERAL:
          case TOK_NOT:
          case TOK_MINUS:
          case TOK_LEFT_PAREN:
          case ID:
          case TOK_HEX:
          case TOK_NUMBERS:
            expr();
            break;
          default:
            jj_la1[11] = jj_gen;
            ;
          }
          jj_consume_token(TOK_SEMICOLON);
        } catch (Throwable jjte003) {
          if (jjtc003) {
            jjtree.clearNodeScope(jjtn003);
            jjtc003 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte003 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte003;}
          }
          if (jjte003 instanceof ParseException) {
            {if (true) throw (ParseException)jjte003;}
          }
          {if (true) throw (Error)jjte003;}
        } finally {
          if (jjtc003) {
            jjtree.closeNodeScope(jjtn003, true);
          }
        }
        break;
      case TOK_BREAK:
          ASTBREAK jjtn004 = new ASTBREAK(JJTBREAK);
          boolean jjtc004 = true;
          jjtree.openNodeScope(jjtn004);
        try {
          jj_consume_token(TOK_BREAK);
          jj_consume_token(TOK_SEMICOLON);
        } finally {
          if (jjtc004) {
            jjtree.closeNodeScope(jjtn004, true);
          }
        }
        break;
      case TOK_CONTINUE:
          ASTCONTINUE jjtn005 = new ASTCONTINUE(JJTCONTINUE);
          boolean jjtc005 = true;
          jjtree.openNodeScope(jjtn005);
        try {
          jj_consume_token(TOK_CONTINUE);
          jj_consume_token(TOK_SEMICOLON);
        } finally {
          if (jjtc005) {
            jjtree.closeNodeScope(jjtn005, true);
          }
        }
        break;
      case TOK_LEFT_BRACE:
        block();
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void assignment() throws ParseException {
    location();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TOK_ASSIGN:
      jj_consume_token(TOK_ASSIGN);
                          ASTASSIGN jjtn001 = new ASTASSIGN(JJTASSIGN);
                          boolean jjtc001 = true;
                          jjtree.openNodeScope(jjtn001);
      try {
        expr();
      } catch (Throwable jjte001) {
                          if (jjtc001) {
                            jjtree.clearNodeScope(jjtn001);
                            jjtc001 = false;
                          } else {
                            jjtree.popNode();
                          }
                          if (jjte001 instanceof RuntimeException) {
                            {if (true) throw (RuntimeException)jjte001;}
                          }
                          if (jjte001 instanceof ParseException) {
                            {if (true) throw (ParseException)jjte001;}
                          }
                          {if (true) throw (Error)jjte001;}
      } finally {
                          if (jjtc001) {
                            jjtree.closeNodeScope(jjtn001,  2);
                          }
      }
      break;
    case TOK_ADD_ASIGN:
      jj_consume_token(TOK_ADD_ASIGN);
                                                                ASTADD_ASSIGN jjtn002 = new ASTADD_ASSIGN(JJTADD_ASSIGN);
                                                                boolean jjtc002 = true;
                                                                jjtree.openNodeScope(jjtn002);
      try {
        expr();
      } catch (Throwable jjte002) {
                                                                if (jjtc002) {
                                                                  jjtree.clearNodeScope(jjtn002);
                                                                  jjtc002 = false;
                                                                } else {
                                                                  jjtree.popNode();
                                                                }
                                                                if (jjte002 instanceof RuntimeException) {
                                                                  {if (true) throw (RuntimeException)jjte002;}
                                                                }
                                                                if (jjte002 instanceof ParseException) {
                                                                  {if (true) throw (ParseException)jjte002;}
                                                                }
                                                                {if (true) throw (Error)jjte002;}
      } finally {
                                                                if (jjtc002) {
                                                                  jjtree.closeNodeScope(jjtn002,  2);
                                                                }
      }
      break;
    case TOK_SUB_ASSIGN:
      jj_consume_token(TOK_SUB_ASSIGN);
                                                                                                           ASTSUB_ASSIGN jjtn003 = new ASTSUB_ASSIGN(JJTSUB_ASSIGN);
                                                                                                           boolean jjtc003 = true;
                                                                                                           jjtree.openNodeScope(jjtn003);
      try {
        expr();
      } catch (Throwable jjte003) {
                                                                                                           if (jjtc003) {
                                                                                                             jjtree.clearNodeScope(jjtn003);
                                                                                                             jjtc003 = false;
                                                                                                           } else {
                                                                                                             jjtree.popNode();
                                                                                                           }
                                                                                                           if (jjte003 instanceof RuntimeException) {
                                                                                                             {if (true) throw (RuntimeException)jjte003;}
                                                                                                           }
                                                                                                           if (jjte003 instanceof ParseException) {
                                                                                                             {if (true) throw (ParseException)jjte003;}
                                                                                                           }
                                                                                                           {if (true) throw (Error)jjte003;}
      } finally {
                                                                                                           if (jjtc003) {
                                                                                                             jjtree.closeNodeScope(jjtn003,  2);
                                                                                                           }
      }
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(TOK_SEMICOLON);
  }
